ItemServiceTest revamp